--- a/_config.yml
+++ b/_config.yml
@@ -28,14 +28,14 @@ paginate_path: "/articles/page:num/"  # link scheme for articles, should be letf
 # Used to define the navigation menu items
 # > Title is the tile of the navigation item, url the url and desc is the tooltip
 navigation:
-  - title: Articles
-    url: /articles/
+  - title: Portfolio
+    url: /portFolio/
     desc: Stuffs I write about
   - title: Projects
     url: /projects/
     desc: Stuffs I like to do
-  - title: Work
-    url: /work/
+  - title: Resume
+    url: /resume/
     desc: Stuffs I hate to do
   - title: About
     url: /about/
