--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ paginate_path: "/articles/page:num/"  # link scheme for articles, should be letf
 # > Title is the tile of the navigation item, url the url and desc is the tooltip
 navigation:
   - title: Portfolio
-    url: /portFolio/
+    url: /portfolio/
     desc: Stuffs I write about
   - title: Projects
     url: /projects/
